tests/int/use_command/snapshots/integration__int__use_command__nesting__modules_nesting__level1_nesting_r_e_grouped.snap
---
source: tests/int/use_command/nesting.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/modules
    - use
    - "nesting::level1"
    - "-r"
    - "-e"
    - "--grouped"
---
success: true
exit_code: 0
----- stdout -----
nesting::level1
 - crate::nesting::depth
nesting::level1::level2
 - crate::nesting::depth
nesting::level1::level2::level3
 - crate::nesting::depth
 - crate::nesting::level1::depth
 - crate::nesting::level1::level2::depth

----- stderr -----
